Add content + styling

--- a/index.html
+++ b/index.html
@@ -22,5 +22,24 @@
       <button>Sign in</button>
     </div>
   </nav>
+
+  <section>
+    <div class="title">
+      <p>Embrace the Wild</p>
+    </div>
+    <div class="content">
+      <img src="https://images.pexels.com/photos/338936/pexels-photo-338936.jpeg" alt="A forest">
+      <p>
+        Beneath the endless sky, the earth breathes in quiet poetry.
+        Sunlight drips through emerald leaves, painting gold upon the morning dew. 
+        Every breeze carries a secret, every river hums a forgotten song. 
+        In nature’s embrace, we are both small and infinite—woven into the rhythm of life itself.
+        The forest speaks in murmurs only the heart can understand. 
+        Petals unfold like whispered dreams, and the mountains cradle the sun as it drifts to sleep. 
+        Every dawn feels like a promise reborn, every dusk a gentle sigh of peace. 
+        To walk among the trees is to remember what it means to be—unrushed, untamed, and endlessly alive.
+      </p>
+    </div>
+  </section>
 </body>
 </html>
