--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Blog Page</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="shortcut icon" href="./images/tree.png" type="image/x-icon">
   <style>@import url('https://fonts.googleapis.com/css2?family=Afacad:ital,wght@0,400..700;1,400..700&family=Funnel+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');</style>
 </head>
 <body>
